# toodle

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/moodle_toml/: __init__.py
src/moodle_toml/parser/: __init__.py  category.py  coderunner.py  question.py  quiz.py  short_answer.py  shortanswer.py  utils.py
src/moodle_toml/templates/: category.xml  coderunner.xml  quiz.xml  serializable.py  shortanswer.xml
src/toodle/: __init__.py  __main__.py  validator.py
src/toodle/cli/: __init__.py  build.py  make.py  new.py  validate.py
src/toodle/core/questions/: __init__.py  category.py  coderunner.py  multichoice.py  question.py  quiz.py  shortanswer.py
src/toodle/core/serialization/: __init__.py  serializable.py  serializer.py
src/toodle/core/serialization/schema_validation/: validation.py
src/toodle/core/serialization/schema_validation/schemata/: category.schema.json  coderunner.schema.json  multichoice.schema.json  question.schema.json  quiz.schema.json  shortanswer.schema.json
src/toodle/core/serialization/schema_validation/schemata/components/: file.schema.json  markup.schema.json  (+1 more)
src/toodle/core/serialization/xml/: serializer.py
src/toodle/core/serialization/xml/templates/: category.xml  coderunner.xml  img.xml  multichoice.xml  shortanswer.xml
src/toodle/parser/: category.py  quiz.py
src/toodle/parser/questions/: __init__.py  coderunner.py  multichoice.py  question.py  short_answer.py  shortanswer.py
src/toodle/qdata/: __init__.py
src/toodle/qdata/coderunner/: schema.json  template.xml
src/toodle/qdata/multichoice/: schema.json
src/toodle/qdata/question/: question-schema.json
src/toodle/qdata/shortanswer/: template.xml
src/toodle/schemata/: coderunner-schema.json  multichoice-schema.json  shortanswer-schema.json
src/toodle/templates/: __init__.py  multichoice.xml  serializable.py  shortanswer.xml
src/toodle/utils/: files.py  images.py  logs.py  logutils.py  markup.py
