[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toodle"
version = "1.0.0a9"
description = '''
A small transpiler that converts human-readable text and TOML file formats
representing Moodle questions to Moodle XML'''
requires-python = ">=3.11"
keywords = ["Moodle"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Utilities",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies", "readme"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.xml", "*.json"]


[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
toodle = "toodle:__main__"
